<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="60dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="289dp"
        android:layout_height="27dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:width="100dp"
        android:text="Comparador de Textos"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="327dp"
        android:layout_height="67dp"
        android:layout_below="@id/titulo"
        android:layout_marginTop="80dp"
        android:hint="Ingrese el texto para comparar" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:layout_below="@id/editText1"
        android:layout_marginTop="150dp"
        android:hint="Ingrese el texto a comparar" />

    <Button
        android:id="@+id/buttonCompare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="Comparar" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCompare"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:width="200dp"
        android:text="Esperando comparación"
        android:layout_marginTop="60dp"
        android:textSize="15dp"/>



</RelativeLayout>